Fix modal overflow issue on bulk list popup UI. Closes #1030.

--- a/frontend/src/assets/style.scss
+++ b/frontend/src/assets/style.scss
@@ -357,6 +357,19 @@ body.is-noscroll {
 /* Modal */
 .modal {
   z-index: 950;
+
+  &.has-overflow {
+    overflow: auto !important;
+    .modal-content {
+      overflow: visible !important;
+    }
+    .modal-card {
+      overflow: visible !important;
+    }
+    .modal-card-body {
+      overflow: visible !important;
+    }
+  }
 }
 .modal-background {
   background: rgba(255, 255, 255, 0.7);
@@ -376,6 +389,7 @@ body.is-noscroll {
 .modal .modal-close.is-large {
   display: none;
 }
+
 
 /* Table */
 .b-table .level-left {
